# Vibe_Layout

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  layout_intent.md
.github/workflows/: tests.yml
configs/: example_tech.yaml
docs/: ADDING_LAYOUT_INTENTS.md  USER_GUIDE.md
examples/: simple_cell.py
src/klayout_harness/: __init__.py  actuation.py  agent.py  cad.py  cli.py  context.py  design_request.py  feedback.py  jobs.py  preview.py  semantic.py  server.py
tests/: test_agent.py  test_cad.py  test_cli.py  test_context.py  test_design_request.py  test_feedback.py  test_hall_bar.py  test_integration_gds.py  test_jobs.py  test_micro_channel.py  test_nanogap_array.py  test_preview.py  test_semantic.py  test_server.py  test_srr_feedline.py
