[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-layout"
version = "0.1.0"
description = "Harness-based KLayout design agent scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
gds = [
  "klayout>=0.30",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "Pillow>=10",
]

[project.scripts]
vibe-layout = "klayout_harness.cli:main"
vibe-layout-server = "klayout_harness.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
